--- a/Pipeline/test-deploy.yml
+++ b/Pipeline/test-deploy.yml
@@ -72,3 +72,16 @@ stages:
 
         azurePowerShellVersion: LatestVersion
         errorActionPreference: stop
+        
+    - task: AzurePowerShell@4
+      inputs:
+        azureSubscription: 'Azure_test'
+        ScriptType: 'FilePath'
+        ScriptPath: ${{ variables.scriptsroot }}\deploy_secrets.ps1
+
+        azurePowerShellVersion: LatestVersion
+        errorActionPreference: stop        
+        
+        
+        
+        
